Cors and readme were fixed

--- a/serverless.yml
+++ b/serverless.yml
@@ -11,30 +11,35 @@ functions:
       - http:
           path: user
           method: post
+          cors: true
   getUser:
     handler: api/users/getUser.getUser
     events:
       - http:
           path: user
           method: get
+          cors: true
   getUsers:
     handler: api/users/getUsers.getUsers
     events:
       - http:
           path: users
           method: get
+          cors: true
   updateUser:
     handler: api/users/updateUser.updateUser
     events:
       - http:
           path: user
           method: put
+          cors: true
   deleteUser:
     handler: api/users/deleteUser.deleteUser
     events:
       - http:
           path: user
           method: delete
+          cors: true
   
   createCategory:
     handler: api/categories/createCategory.createCategory
@@ -42,30 +47,35 @@ functions:
       - http:
           path: category
           method: post
+          cors: true
   getCategory:
     handler: api/categories/getCategory.getCategory
     events:
       - http:
           path: category
           method: get
+          cors: true
   getCategories:
     handler: api/categories/getCategories.getCategories
     events:
       - http:
           path: categories
           method: get
+          cors: true
   updateCategory:
     handler: api/categories/updateCategory.updateCategory
     events:
       - http:
           path: category
           method: put
+          cors: true
   deleteCategory:
     handler: api/categories/deleteCategory.deleteCategory
     events:
       - http:
           path: category
           method: delete
+          cors: true
 
   createPurchase:
     handler: api/purchases/createPurchase.createPurchase
@@ -73,27 +83,32 @@ functions:
       - http:
           path: purchase
           method: post
+          cors: true
   getPurchase:
     handler: api/purchases/getPurchase.getPurchase
     events:
       - http:
           path: purchase
           method: get
+          cors: true
   getPurchases:
     handler: api/purchases/getPurchases.getPurchases
     events:
       - http:
           path: purchases
           method: get
+          cors: true
   updatePurchase:
     handler: api/purchases/updatePurchase.updatePurchase
     events:
       - http:
           path: purchase
           method: put
+          cors: true
   deletePurchase:
     handler: api/purchases/deletePurchase.deletePurchase
     events:
       - http:
           path: purchase
           method: delete
+          cors: true
